--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-  "dev": "nx dev cv-portfolio"
-},
+    "dev": "nx dev cv-portfolio"
+  },
   "private": true,
   "dependencies": {
     "next": "~15.2.4",
@@ -31,11 +31,12 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "nx": "20.7.1",
     "postcss": "8.4.38",
-    "prettier": "^2.6.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
