--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-draggable": "^4.4.6"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
