--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx dev cv-portfolio"
+    "dev": "nx dev cv-portfolio",
+    "clean": "rimraf ./apps/cv-portfolio/.next"
   },
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -38,6 +40,7 @@
     "nx": "20.7.1",
     "postcss": "8.4.38",
     "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
