--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "@./source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nx dev cv-portfolio"
-  },
+  "name": "cv-portfolio",
+  "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "dev": "nx dev cv-portfolio",
+    "lint": "nx lint cv-portfolio",
+    "lint:fix": "nx lint cv-portfolio --fix",
+    "build": "nx build cv-portfolio",
+    "start": "nx serve cv-portfolio"
+  },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@heroicons/react": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
