--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "start": "nx serve cv-portfolio"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "@heroicons/react": "^2.2.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "^9.8.0",
     "@nx/eslint": "20.7.1",
     "@nx/eslint-plugin": "20.7.1",
     "@nx/js": "20.7.1",
@@ -29,8 +28,10 @@
     "@swc/helpers": "~0.5.11",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "autoprefixer": "10.4.13",
-    "eslint": "^9.8.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -43,8 +44,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript": "~5.7.2"
   },
   "workspaces": [
     "apps/*"
