--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,36 +4,39 @@ on:
   push:
     branches:
       - main
+      - develop
   pull_request:
 
 permissions:
-  actions: read
   contents: read
 
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      # Uncomment this line to enable task distribution
-      # - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
-
-      # Cache node_modules
-      - uses: actions/setup-node@v4
+      - name: 🟢 Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: 18
+          cache: yarn
 
-      - run: npm ci --legacy-peer-deps
-      - uses: nrwl/nx-set-shas@v4
+      - name: 📦 Install dependencies (Yarn Workspaces)
+        run: yarn install --frozen-lockfile
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: npx nx-cloud record -- echo Hello World
-      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      - run: npx nx affected -t lint test build
+      - name: 🧹 Run linting
+        run: yarn lint
+
+      - name: 🎨 Check formatting
+        run: yarn nx format:check
+
+      - name: 🛠️ Build affected projects
+        run: yarn nx affected:build --base=origin/main --head=HEAD
+
+      - name: ✅ Run tests (optional if you have tests)
+        run: yarn nx affected:test --base=origin/main --head=HEAD
