--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "next": "~15.2.4",
     "react": "19.0.0",
