--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nx:format": "nx format:write",
     "nx:format:check": "nx format:check",
     "nx:format:changed": "nx format:write --base=origin/main --head=HEAD",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
@@ -56,7 +57,8 @@
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.29.1",
+    "husky": "^8.0.0"
   },
   "workspaces": [
     "apps/*"
