--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "next": "~15.2.4",
+    "next-intl": "^4.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.5.2"
