--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,11 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"]
+    "customConditions": ["development"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["apps/cv-portfolio/src/*"],
+      "@admin/*": ["apps/admin-portal/src/*"]
+    }
   }
 }
