--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss": "8.4.38",
     "prettier": "^3.5.3",
     "tailwindcss": "3.4.3",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.29.1"
