--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "v2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "husky": "^9.1.7",
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "husky": "^8.0.0",
     "nx": "20.7.1",
     "postcss": "8.4.38",
     "prettier": "^3.5.3",
@@ -59,8 +60,7 @@
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.29.1",
-    "husky": "^8.0.0"
+    "typescript-eslint": "^8.29.1"
   },
   "workspaces": [
     "apps/*"
